***CHANGES should not affect pre-Vista/Server 2008 machines,  *** ***but it is UNTESTED IN Server 2003, USE WITH CAUTION for now*** Added CreateConfigFile function with updated comments Added ability to get FQDN from DNS Removed requirement to reside in Windows\system32 Added AUDIT_SUCCESS/FAILURE to messages Added ability to use XPath filters in Vista+ Hopefully dramatically improved filtering performance in Vista/2k8+

--- a/4.0/Eventlog to Syslog.vcxproj.filters
+++ b/4.0/Eventlog to Syslog.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="wsock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dns.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ver.rc">
@@ -95,6 +98,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="wsock.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dns.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
